# Attendance-Website

./: BIOMETRIC_SECURITY.md  Cargo.toml  README.md  RUST_BACKEND.md  firebase-blueprint.json  firestore.rules  index.html  metadata.json  server.ts
face-recognition-assets/: batch-generator.js  instructions.md
face-recognition-assets/cloud-function/: index.js  package.json
face-recognition-assets/frontend/: attendance.html  attendance.js
rust-src/: main.rs
src/: App.tsx  data.ts  firebase.ts  types.ts
src/components/: AdminDashboard.tsx  AuthGate.tsx  LecturerDashboard.tsx  Navbar.tsx  StudentPortal.tsx
src/utils/: security.ts
